--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "swiper": "^5.3.8",
         "vue-awesome-swiper": "^4.1.1",
         "vue-router": "^3.1.6",
+        "vue-toasted": "^1.1.28",
         "vue-waves-button": "^1.0.4"
     }
 }
