--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "private": true,
-    "name": "ilc-center",
+    "name": "isl-center",
     "description": "Imo state website",
     "version": "1.0.0",
     "engines": {
