--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:e9V+egvHV7FJ1HquNbSHwKYpbGBxNVS6YlFsjcEVFI8=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=isl-center.herokuapp.com
 
 LOG_CHANNEL=stack
 
