--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ DB_HOST=db4free.net
 DB_PORT=3306
 DB_DATABASE=islcenter
 DB_USERNAME=islcenter
-DB_PASSWORD=islcenter
+DB_PASSWORD=arudovwen
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
