--- a/.env
+++ b/.env
@@ -1,17 +1,17 @@
-APP_NAME=Laravel
-APP_ENV=local
+APP_NAME=ISL-Center
+APP_ENV=production
 APP_KEY=base64:e9V+egvHV7FJ1HquNbSHwKYpbGBxNVS6YlFsjcEVFI8=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://isl-center.herokuapp.com
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=db4free.net
 DB_PORT=3306
-DB_DATABASE=ilc
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=islcenter
+DB_USERNAME=islcenter
+DB_PASSWORD=arudovwen
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
