updated env file

--- a/.env
+++ b/.env
@@ -1,17 +1,17 @@
 APP_NAME=islcenter
-APP_ENV=local
+APP_ENV=Production
 APP_KEY=base64:e9V+egvHV7FJ1HquNbSHwKYpbGBxNVS6YlFsjcEVFI8=
 APP_DEBUG=true
 APP_URL=https://isl-center.herokuapp.com
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=mysql
+DB_HOST=us-cdbr-east-06.cleardb.net
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=ilc
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=heroku_7deea40156051a5
+DB_USERNAME=bd8e52be4e9b92
+DB_PASSWORD=036a670c
 
 
 BROADCAST_DRIVER=pusher
