updated env file

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_NAME=islcenter
-APP_ENV=Production
+APP_ENV=production
 APP_KEY=base64:e9V+egvHV7FJ1HquNbSHwKYpbGBxNVS6YlFsjcEVFI8=
 APP_DEBUG=true
 APP_URL=https://isl-center.herokuapp.com
