--- a/.env
+++ b/.env
@@ -6,8 +6,8 @@ APP_URL=https://isl-center.herokuapp.com
 
 LOG_CHANNEL=stack
 
+DB_CONNECTION=mysql
 DB_HOST=us-cdbr-east-06.cleardb.net
-DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=heroku_7deea40156051a5
 DB_USERNAME=bd8e52be4e9b92
