--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "vue-awesome-swiper": "^4.1.1",
         "vue-moment": "^4.1.0",
         "vue-paystack": "^2.0.2",
+        "vue-pdf": "^4.1.0",
         "vue-router": "^3.1.6",
         "vue-toasted": "^1.1.28",
         "vue-waves-button": "^1.0.4"
