--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "swiper": "^5.3.8",
         "v-emoji-picker": "^2.2.0",
         "vue-awesome-swiper": "^4.1.1",
+        "vue-chat-scroll": "^1.4.0",
         "vue-moment": "^4.1.0",
         "vue-paystack": "^2.0.2",
         "vue-pdf": "^4.1.0",
