--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
         "vue": "^2.6.11",
+        "vue-svgicon": "^4.0.1-alpha.0",
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
