--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-APP_NAME=islcenter
-APP_ENV=production
+APP_NAME=
+APP_ENV=local
 APP_KEY=base64:e9V+egvHV7FJ1HquNbSHwKYpbGBxNVS6YlFsjcEVFI8=
 APP_DEBUG=true
 APP_URL=https://isl-center.herokuapp.com
@@ -24,13 +24,13 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.googlemail.com
+MAIL_PORT=465
+MAIL_USERNAME=ministryofeducationimostate@gmail.com
+MAIL_PASSWORD=P@55W0RD
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS=JJ@email.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
