--- a/package.json
+++ b/package.json
@@ -35,18 +35,21 @@
         "@tinymce/tinymce-vue": "^3.2.2",
         "bootstrap-vue": "^2.15.0",
         "chart.js": "^2.9.3",
+        "filterizr": "^2.2.4",
+        "isotope-layout": "^3.0.6",
         "laravel-echo": "^1.8.0",
         "pusher-js": "^6.0.3",
         "swiper": "^5.3.8",
         "v-emoji-picker": "^2.2.0",
         "vue-awesome-swiper": "^4.1.1",
-        "vue-chat-scroll": "^1.4.0",
         "vue-chartkick": "^0.6.0",
+        "vue-chat-scroll": "^1.4.0",
         "vue-moment": "^4.1.0",
         "vue-paystack": "^2.0.2",
         "vue-pdf": "^4.1.0",
         "vue-router": "^3.1.6",
         "vue-toasted": "^1.1.28",
-        "vue-waves-button": "^1.0.4"
+        "vue-waves-button": "^1.0.4",
+        "vueisotope": "^3.1.2"
     }
 }
