--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "vue-router": "^3.1.6",
         "vue-toasted": "^1.1.28",
         "vue-waves-button": "^1.0.4",
-        "vueisotope": "^3.1.2"
+        "vueisotope": "^3.1.2",
+        "vuejs-datetimepicker": "^1.1.13"
     }
 }
