--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
         "filterizr": "^2.2.4",
         "isotope-layout": "^3.0.6",
         "laravel-echo": "^1.8.0",
+        "material-design-icons": "^3.0.1",
         "pusher-js": "^6.0.3",
         "swiper": "^5.3.8",
+        "v-calendar": "^1.0.8",
         "v-emoji-picker": "^2.2.0",
         "vue-awesome-swiper": "^4.1.1",
         "vue-chartkick": "^0.6.0",
@@ -48,6 +50,7 @@
         "vue-paystack": "^2.0.2",
         "vue-pdf": "^4.1.0",
         "vue-router": "^3.1.6",
+        "vue-single-date-picker": "^0.5.11",
         "vue-toasted": "^1.1.28",
         "vue-waves-button": "^1.0.4",
         "vueisotope": "^3.1.2",
