--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "vue-waves-button": "^1.0.4",
         "vue2-circle-progress": "^1.2.3",
         "vueisotope": "^3.1.2",
+        "vuejs-countdown-timer": "^2.1.2",
         "vuejs-datetimepicker": "^1.1.13"
     }
 }
